--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-email",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "author": "SalathielGenese <salathielgenese@gmail.com>",
   "license": "MIT",
   "dependencies": {
